--- a/RecommendSysem/src/main/webapp/css/medile.css
+++ b/RecommendSysem/src/main/webapp/css/medile.css
@@ -142,6 +142,23 @@ ul#myTab {
 .w3l-action-icon{
 	display:none;
 }
+
+.video-img:hover .w3l-action-icon  {
+    display: block;
+    position: absolute;
+    top: 37%;
+    left: 41%;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+.video-img{
+    position:relative;
+}
+.w3l-action-icon{
+    display:none;
+}
+
 /* imghvr-shutter-out-*
 /* Shutter Out Horizontal */
 .hvr-shutter-out-horizontal {
@@ -246,6 +263,9 @@ i.glyphicon.glyphicon-play-circle {
     font-size: 3em;
 }
 .w3l-movie-gride-agile img:hover {
+    opacity: 0.5;
+}
+.video-img img:hover {
     opacity: 0.5;
 }
 .ribben {
